--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
     "com.unity.addressables": "1.16.19",
+    "com.unity.burst": "1.4.9",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.jobs": "0.8.0-preview.23",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
     "com.unity.timeline": "1.4.7",
